# project_for_tests_10_2

./: README.md  pyproject.toml
tests/: test_taxes.py
